# aim_ws

./: .gitignore  readme.txt
docker-morai/: Dockerfile  README.txt  docker-compose.yaml  run.sh
docker-noetic/: Dockerfile  docker-compose.pc.yaml  readme.txt
src/Global/: Global.hpp
src/Lidar/: CMakeLists.txt  package.xml
src/Lidar/Euclidean/: Euclidean.cpp  Euclidean.hpp
src/Lidar/LidarProcess/: LidarProcess.cpp  LidarProcess.hpp
src/Lidar/Lshapefitting/: Lshapefitting.cpp  Lshapefitting.hpp
src/Lidar/Ransac/: Ransac.cpp  Ransac.hpp
src/Lidar/RoiVoxel/: RoiVoxel.cpp  RoiVoxel.hpp
src/Lidar/include/lidar/: convex.h
src/Lidar/rviz/: cluster_cav.rviz  lidar_link.rviz
src/Lidar/src/: convex.cpp  convex_hull.cpp  func_3D.cpp  lshape.cpp
src/Visualizer/: Visualizer.hpp
src/camera/: CMakeLists.txt  package.xml
src/camera/msg/: traffic_light_detection.msg
src/camera/scripts/: HW4.py  HW5_backline.py  HW6_filter_noise.py  alpa.py  ctrlcmd.py  find_hsv.py  grouping  original_vanishing_point.py  trafficlightdetection.py
src/carvision/: CMakeLists.txt
src/carvision/launch/: pp_avoidance.launch
src/geo_convert/: CMakeLists.txt  package.xml
src/geo_convert/config/: coord.yaml
src/geo_convert/launch/: geo_converter.launch
src/geo_convert/src/: ego_wgs84.cpp  enu_wgs84.cpp  geo_converter.cpp  geo_converter_2.cpp  geo_converter_ego.cpp  geo_converter_gps.cpp
src/lattice_planner_morai/: CMakeLists.txt  package.xml  최종_요약_한글.md
src/lattice_planner_morai/include/lattice_planner_morai/: lidar_costmap_utils.h
src/lattice_planner_morai/launch/: lidar_costmap_generator.launch
src/lattice_planner_morai/src/: lidar_costmap_generator.cpp
src/my_amcl_launcher/: package.xml
src/my_amcl_launcher/launch/: my_amcl.launch
src/my_mapping_launcher/: package.xml  readme.txt
src/my_mapping_launcher/config/: turtlebot3_lds_2d.lua
src/my_mapping_launcher/launch/: my_gmapping.launch  my_gmapping_morai.launch  my_slam.launch  my_slam_morai.launch
src/parkie_morai/: CMakeLists.txt  package.xml  readme.txt
src/parkie_morai/config/: cartographer.lua  ekf_odom.yaml
src/parkie_morai/launch/: cartographer.launch  ekf_odom.launch  gmapping.launch  lidar.launch  save_map.launch  slim.launch  tf.launch  tf_static.launch
src/parkie_morai/rviz/: display_new.rviz
src/parkie_morai/src/: convert_lidar.cpp
src/robot_localization/launch/: start_ekf_localization.launch
src/robot_localization/params/: dual_ekf_navsat_example.yaml  ekf_localization.yaml
src/ros_limo/: CMakeLists.txt  package.xml
src/roscpp_morai/: CMakeLists.txt  package.xml  readme.txt
src/roscpp_morai/config/: lattice_planner.rviz  track_log.csv  track_log_recorded_right.csv  yaml_hybrid.yaml
src/roscpp_morai/data/: ego_topic.csv  ego_topic_log.txt  readme.txt
src/roscpp_morai/launch/: ego_path_recorder.launch  ego_path_recorder_bag_kante.launch  ego_path_recorder_csv_kante.launch  global_path_pub_kante.launch  global_path_publisher.launch  lane_follower_autorace.launch  lattice_planner_with_costmap.launch  local_path_maker_pp.launch  morai_pp.launch  path_visualizer.launch  pp_1026.launch  pp_local_path_1102.launch  pp_with_obstacle.launch  pure_pursuit_controller_kante.launch
src/roscpp_morai/scripts/: gap_navigation_morai_py.py  test_goal_publisher.py  tst_path_visualize_csv.py
src/roscpp_morai/scripts/control/: gap_navigation_morai_py.py
src/roscpp_morai/src/: ego_path_recorder.cpp  ego_path_recorder_csv_kante.cpp  global_path_pub_kante.cpp  global_path_publisher.cpp  local_path_maker.cpp  local_path_pub_kante.cpp  path_visualizer.cpp  pp_1026.cpp  pp_from_csv_node.cpp  pp_local_path_1102.cpp  pure_pursuit_controller.cpp  pure_pursuit_controller_kante.cpp  rosbag.txt
src/roscpp_morai/src/control/: curvature_control.cpp  curvature_control_ver2.cpp  curvature_control_verPID.cpp  curvature_control_verPID_old.cpp  hybrid.cpp  hybrid_function.cpp  pp_1026.cpp  pp_1026_noclass_test.cpp  stanely_1105.cpp  stanely_1105_ERROR.cpp
src/roscpp_morai/src/decision/: gap_navigator_morai.cpp  lattice_planner_with_costmap.cpp  navigator_avoidance_with_lidar.cpp  only_lattice_planner_node.cpp  only_lattice_planner_node_ver2.cpp  pp_1102.cpp  pp_fixed_speed.cpp
src/roscpp_morai/src/perception/: obstace_detector.cpp
src/roscpp_morai/src/perception/camera/rviz_camera/: test.cpp
src/roscpp_morai/src/perception/gps/: gps_gamming_perception.cpp
src/roscpp_morai/src/perception/launch/: urdf_pub.launch
src/roscpp_morai/src/perception/lidar/: lidar_aabb_costmap_node.cpp  lidar_aabb_costmap_node_ver2.cpp  lidar_aabb_costmap_node_ver3.cpp
src/roscpp_morai/src/perception/lidar/config/: lidar_aabb_params.hpp
src/roscpp_morai/src/perception/lidar/costmap/: costmap.cpp  costmap.hpp  costmap_init.hpp
src/roscpp_morai/src/perception/lidar/lidar_callback/: lidar_callback.hpp
src/roscpp_morai/src/perception/lidar/pointcloud_processing/: pointcloud_processing.hpp
src/roscpp_morai/src/perception/lidar/visualize/: lidar_aabb_visualize.hpp
src/roscpp_morai_2/: CMakeLists.txt  package.xml
src/roscpp_morai_2/include/roscpp_morai_2/: control_compute.hpp  control_file.hpp
src/roscpp_morai_2/launch/: control_center_morai_clear.launch
src/roscpp_morai_2/src/: control_compute_function.cpp  control_file_function.cpp  curvature_control_clear.cpp
src/roscpp_wk1/: package.xml
src/roscpp_wk1/msg/: Greeting.msg
src/roscpp_wk1/src/: adder_client.cpp  greet_pub.cpp  test1.cpp  (+2 more)
src/turtlebot_localization/: package.xml
src/wego/: CMakeLists.txt  package.xml
src/wego_2d_nav/: CMakeLists.txt  package.xml
src_old/roscpp_morai/: CMakeLists.txt
src_old/roscpp_morai/launch/: ego_path_recorder_kante.launch  morai_pp_all.launch  pure_pursuit_controller_kante.launch  rosbag_record.launch
src_old/roscpp_morai/src/: ego_path_recorder.cpp  ego_path_recorder_bag_kante.cpp  ego_path_recorder_csv_kante.cpp  local_path_pub_kante.cpp  pure_pursuit_controller_kante.cpp
src_old/roscpp_wk1/: CMakeLists.txt
src_old/roscpp_wk1/src/: adder_server.cpp  greet_sub.cpp  morai.txt  test_adder.txt  test_greet.txt
(+22 files in other folders)
