<?xml version="1.0"?>
<package format="2">
  <name>geo_convert</name>
  <version>0.0.0</version>
  <description>The geo_convert package</description>

  <maintainer email="you@todo.todo">your_name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- 의존성 추가 -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>morai_msgs</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>roscpp_serialization</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>morai_msgs</exec_depend>
  <exec_depend>rosbag</exec_depend>
  <exec_depend>roscpp_serialization</exec_depend>

  <export>
  </export>
</package>
