<?xml version="1.0"?>
<package>
  <name>lattice_planner_morai</name>
  <version>1.0.0</version>
  <description>
    MORAI-customized lattice planner with enhanced ROS integration
  </description>

  <maintainer email="kante@example.com">Kante</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/kante/lattice_planner_morai</url>
  <author email="kante@example.com">Kante</author>

  <!-- 의존성 -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>

  <!-- 플러그인 선언 -->
  <export>
    <nav_core plugin="${prefix}/lattice_planner_morai_plugins.xml"/>
  </export>
</package>